...
    
    var body: some View {
        if cellModel.viewMode == .quickView {
            Text(formulaValue?.text ?? cellModel.data.title)
                .font(.system(size: 15))
                .lineLimit(1)
                .accessibilityIdentifier("TableTextFieldIdentifierReadonly")
        } else if cellModel.editMode == .readonly {
            ScrollView {
                Text(formulaValue?.text ?? cellModel.data.title)
                    .font(.system(size: 15))
                    .frame(maxWidth: .infinity, alignment: .leading)
                    .padding(.horizontal, 5)
                    .padding(.vertical, 8)
                    .accessibilityIdentifier("TableTextFieldIdentifierReadonly")
                    .disabled(true)
            }
            .environment(\.isEnabled, true)
            .accessibilityIdentifier("TableTextFieldReadonlyScrollView")
        } else {
            if #available(iOS 16.0, *) {
                TextEditor(text: $cellModel.data.title)
                    .foregroundColor(showsResult ? .clear : .primary)
                    .font(.system(size: 15))
                    .scrollContentBackground(.hidden)
                    .accessibilityIdentifier("TabelTextFieldIdentifier")
                    .onChange(of: cellModel.data.title) { _ in
                        updateFieldValue()
                    }
                    .focused($isTextFieldFocused)
                    .onChange(of: isTextFieldFocused) { focused in
                        if focused {
...
