...
                    Spacer()
                    Image(systemName: "chevron.down")
                }
                .frame(maxWidth: .infinity)
                .padding(.all, 10)
            })
            .accessibilityIdentifier("TableDropdownIdentifier")
            .sheet(isPresented: $isSheetPresented) {
                PDFTableDropDownOptionList(data: cellModel.data, selectedDropdownValue: $selectedDropdownValue)
            }
        }
        .focused($isFocused) // Observe focus state
        .onAppear {
...
                                    .darkLightThemeColor()
                                Spacer()
                            }
                            .padding(.horizontal, 28)
                            .padding(.vertical, 10)
                        })
                        .accessibilityIdentifier("TableDropdownOptionsIdentifier")
                        Divider()
                            .padding(.horizontal, 16)
                    }
                }
            }
            Spacer()
...
